--- a/application.properties
+++ b/application.properties
@@ -1,5 +1,5 @@
 #Grails Metadata file
-#Thu Feb 18 00:16:33 CET 2016
-app.grails.version=2.5.3
+#Sun Apr 24 00:02:15 CEST 2016
+app.grails.version=2.5.4
 app.name=mychat
 app.version=0.1
